# BinarySerializer

./: CMakeLists.txt  vcpkg.json
include/: BinarySerializer.h  pch.h
tests/: test_primitives.cpp  test_stl.cpp
